--- a/template/ros2.dockerfile.jinja
+++ b/template/ros2.dockerfile.jinja
@@ -43,7 +43,7 @@ RUN sudo add-apt-repository universe \
 ENV ROS_DISTRO={{ ros_distro }}
 ENV AMENT_PREFIX_PATH=/opt/ros/{{ ros_distro }}
 ENV COLCON_PREFIX_PATH=/opt/ros/{{ ros_distro }}
-ENV LD_LIBRARY_PATH={% if 'rolling' in ros_distro %}/opt/ros/rolling/opt/zenoh_cpp_vendor/lib:{% endif %}/opt/ros/{{ ros_distro }}/lib/x86_64-linux-gnu:/opt/ros/{{ ros_distro }}/lib
+ENV LD_LIBRARY_PATH={% if ros_distro in ['rolling', 'kilted'] %}/opt/ros/{{ ros_distro }}/opt/zenoh_cpp_vendor/lib:{% endif %}/opt/ros/{{ ros_distro }}/lib/x86_64-linux-gnu:/opt/ros/{{ ros_distro }}/lib
 ENV PATH=/opt/ros/{{ ros_distro }}/bin:$PATH
 ENV PYTHONPATH=/opt/ros/{{ ros_distro }}/local/lib/python{{ python_version }}/dist-packages:/opt/ros/{{ ros_distro }}/lib/python{{ python_version }}/site-packages
 ENV ROS_PYTHON_VERSION=3
