--- a/template/ros2.dockerfile.jinja
+++ b/template/ros2.dockerfile.jinja
@@ -39,17 +39,21 @@ RUN sudo add-apt-repository universe \
 
 {% include 'snippits/nvidia.jinja' %}
 {%- endif %}
+ENV DEBIAN_FRONTEND=
 
 ENV ROS_DISTRO={{ ros_distro }}
 ENV AMENT_PREFIX_PATH=/opt/ros/{{ ros_distro }}
 ENV COLCON_PREFIX_PATH=/opt/ros/{{ ros_distro }}
-ENV LD_LIBRARY_PATH=/opt/ros/{{ ros_distro }}/lib/x86_64-linux-gnu:/opt/ros/{{ ros_distro }}/lib
+ENV LD_LIBRARY_PATH={% if ros_distro in ['rolling', 'kilted'] %}/opt/ros/{{ ros_distro }}/opt/zenoh_cpp_vendor/lib:{% endif %}/opt/ros/{{ ros_distro }}/lib/x86_64-linux-gnu:/opt/ros/{{ ros_distro }}/lib
 ENV PATH=/opt/ros/{{ ros_distro }}/bin:$PATH
 ENV PYTHONPATH=/opt/ros/{{ ros_distro }}/local/lib/python{{ python_version }}/dist-packages:/opt/ros/{{ ros_distro }}/lib/python{{ python_version }}/site-packages
 ENV ROS_PYTHON_VERSION=3
 ENV ROS_VERSION=2
 ENV ROS_AUTOMATIC_DISCOVERY_RANGE=SUBNET
-ENV DEBIAN_FRONTEND=
+ENV ROS_LOCALHOST_ONLY=0
+
+CMD ["bash"]
+
 ###########################################
 #  Develop image
 ###########################################
@@ -89,11 +93,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   && rm -rf /var/lib/apt/lists/*
 ENV DEBIAN_FRONTEND=
 
-{%- if base_image == 'ubuntu' %}
-ENV LD_LIBRARY_PATH=/opt/ros/{{ ros_distro }}/opt/rviz_ogre_vendor/lib:/opt/ros/{{ ros_distro }}/lib/x86_64-linux-gnu:/opt/ros/{{ ros_distro }}/lib
-{%- else %}
-ENV LD_LIBRARY_PATH=/opt/ros/{{ ros_distro }}/lib
-{%- endif %}
+ENV LD_LIBRARY_PATH={% if ros_distro in ['rolling', 'kilted'] %}/opt/ros/{{ ros_distro }}/opt/zenoh_cpp_vendor/lib:{% endif %}/opt/ros/{{ ros_distro }}/opt/gz_math_vendor/lib:/opt/ros/{{ ros_distro }}/opt/gz_utils_vendor/lib:/opt/ros/{{ ros_distro }}/opt/gz_cmake_vendor/lib:/opt/ros/{{ ros_distro }}/opt/rviz_ogre_vendor/lib:/opt/ros/{{ ros_distro }}/lib/x86_64-linux-gnu:/opt/ros/{{ ros_distro }}/lib
+ENV CMAKE_PREFIX_PATH=/opt/ros/{{ ros_distro }}/opt/gz_math_vendor:/opt/ros/{{ ros_distro }}/opt/gz_utils_vendor:/opt/ros/{{ ros_distro }}/opt/gz_cmake_vendor
 
 ###########################################
 #  Full+Gazebo image
@@ -108,3 +109,9 @@ RUN wget https://packages.osrfoundation.org/gazebo.gpg -O /usr/share/keyrings/pk
     ros-{{ ros_distro }}-ros-gz \
   && rm -rf /var/lib/apt/lists/*
 ENV DEBIAN_FRONTEND=
+
+ENV LD_LIBRARY_PATH={% if ros_distro in ['rolling', 'kilted'] %}/opt/ros/{{ ros_distro }}/opt/zenoh_cpp_vendor/lib:{% endif %}/opt/ros/{{ros_distro }}/opt/gz_sim_vendor/lib:/opt/ros/{{ros_distro }}/opt/gz_sensors_vendor/lib:/opt/ros/{{ros_distro }}/opt/gz_physics_vendor/lib:/opt/ros/{{ros_distro }}/opt/sdformat_vendor/lib:/opt/ros/{{ros_distro }}/opt/gz_gui_vendor/lib:/opt/ros/{{ros_distro }}/opt/gz_transport_vendor/lib:/opt/ros/{{ros_distro }}/opt/gz_rendering_vendor/lib:/opt/ros/{{ros_distro }}/opt/gz_plugin_vendor/lib:/opt/ros/{{ros_distro }}/opt/gz_fuel_tools_vendor/lib:/opt/ros/{{ros_distro }}/opt/gz_msgs_vendor/lib:/opt/ros/{{ros_distro }}/opt/gz_common_vendor/lib:/opt/ros/{{ros_distro }}/opt/gz_math_vendor/lib:/opt/ros/{{ros_distro }}/opt/gz_utils_vendor/lib:/opt/ros/{{ros_distro }}/opt/gz_tools_vendor/lib:/opt/ros/{{ros_distro }}/opt/gz_ogre_next_vendor/lib:/opt/ros/{{ros_distro }}/opt/gz_dartsim_vendor/lib:/opt/ros/{{ros_distro }}/opt/gz_cmake_vendor/lib:/opt/ros/{{ros_distro }}/opt/rviz_ogre_vendor/lib:/opt/ros/{{ros_distro }}/lib/x86_64-linux-gnu:/opt/ros/{{ros_distro }}/lib
+ENV GZ_SIM_RESOURCE_PATH=/opt/ros/{{ ros_distro }}/share
+ENV GZ_CONFIG_PATH=/opt/ros/{{ ros_distro }}/opt/gz_sim_vendor/share/gz:/opt/ros/{{ ros_distro }}/opt/sdformat_vendor/share/gz:/opt/ros/{{ ros_distro }}/opt/gz_gui_vendor/share/gz:/opt/ros/{{ ros_distro }}/opt/gz_transport_vendor/share/gz:/opt/ros/{{ ros_distro }}/opt/gz_rendering_vendor/share/gz:/opt/ros/{{ ros_distro }}/opt/gz_plugin_vendor/share/gz:/opt/ros/{{ ros_distro }}/opt/gz_fuel_tools_vendor/share/gz:/opt/ros/{{ ros_distro }}/opt/gz_msgs_vendor/share/gz:/opt/ros/{{ ros_distro }}/opt/gz_common_vendor/share/gz
+ENV PATH=/opt/ros/{{ ros_distro }}/opt/gz_msgs_vendor/bin:/opt/ros/{{ ros_distro }}/opt/gz_tools_vendor/bin:/opt/ros/{{ ros_distro }}/opt/gz_ogre_next_vendor/bin:/opt/ros/{{ ros_distro }}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+ENV CMAKE_PREFIX_PATH=/opt/ros/{{ ros_distro }}/opt/gz_math_vendor:/opt/ros/{{ ros_distro }}/opt/gz_utils_vendor:/opt/ros/{{ ros_distro }}/opt/gz_ogre_next_vendor:/opt/ros/{{ ros_distro }}/opt/gz_dartsim_vendor:/opt/ros/{{ ros_distro }}/opt/gz_cmake_vendor:/opt/ros/{{ ros_distro }}/opt/gz_sim_vendor:/opt/ros/{{ ros_distro }}/opt/gz_sensors_vendor:/opt/ros/{{ ros_distro }}/opt/gz_physics_vendor:/opt/ros/{{ ros_distro }}/opt/sdformat_vendor:/opt/ros/{{ ros_distro }}/opt/gz_gui_vendor:/opt/ros/{{ ros_distro }}/opt/gz_transport_vendor:/opt/ros/{{ ros_distro }}/opt/gz_rendering_vendor:/opt/ros/{{ ros_distro }}/opt/gz_plugin_vendor:/opt/ros/{{ ros_distro }}/opt/gz_fuel_tools_vendor:/opt/ros/{{ ros_distro }}/opt/gz_msgs_vendor:/opt/ros/{{ ros_distro }}/opt/gz_common_vendor:/opt/ros/{{ ros_distro }}/opt/gz_tools_vendor
